# openUSCT

./: .gitignore  LICENSE  README.md  run_tests.py
.claude/: launch.json
.streamlit/: config.toml
docs/: architecture.md  index.html  roadmap.md
hardware/: README.md
hardware/electronics/: README.md
hardware/fpga/: README.md
hardware/mechanical/: README.md
simulation/: README.md
simulation/docs/: theory.md
simulation/examples/: custom_plugin.py  run_anisotropy_demo.py  run_attenuation_demo.py  run_cof_inversion.py  run_cof_robustness.py  run_elastic_demo.py  run_elastic_fwi_demo.py  run_fwi_demo.py  run_fwi_demo_3d.py  run_imaging_demo.py  run_pipeline_demo.py  run_render3d.py  run_theta_fwi.py  wavefield_snapshot.py
simulation/ringfwi/: __init__.py  acquire.py  anisotropy.py  attenuation.py  axisfield.py  cof.py  dataset.py  elastic.py  elastic3d.py  fwi.py  geometry.py  imaging.py  phantom.py  plugins.py  render3d.py  solver.py  sources.py  transducer.py  uarp_format.py  voronoi_inv.py
simulation/tests/: test_anisotropy.py  test_array_render.py  test_axisfield.py  test_cof_jacobian.py  test_cof_objective.py  test_dataset.py  test_elastic.py  test_elastic3d.py  test_elastic3d_gpu.py  test_footprint_shapes.py  test_gauss_newton.py  test_gradient.py  test_gradient_3d.py  test_gradient_aperture.py  test_gradient_attenuation.py  test_gradient_elastic.py  test_gradient_elastic3d.py  test_gradient_gcn.py  test_gradient_misfits.py  test_imaging.py  (+8 more)
software/: README.md
software/core/: CMakeLists.txt  example_main.cpp  libuap.hpp
web/: build_stlite.py
(+52 files in other folders)
